gccida/g2/cselib_init
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cselib_init/src/cselib.c:1899:1: error: use of undeclared identifier 'hash_table_0'; did you mean 'hash_table'?
hash_table_0 = htab_create( 0x1FuLL, get_value_hash, entry_and_rtx_equal_p, 0LL); 
^~~~~~~~~~~~
hash_table
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cselib_init/src/cselib.c:82:15: note: 'hash_table' declared here
static htab_t hash_table;
              ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cselib_init/src/obj/cselib.o] Error 1
